--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Woo - Free Responsive HTML5/CSS3 Template</title>
+    <title>Woo</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
